--- a/css/main.css
+++ b/css/main.css
@@ -94,7 +94,14 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
-
+header {
+    width: 100%;
+    height: 100px;
+    background color: black;
+}
+section.be-random img{
+    width: 100%;
+}
 
 
 
